force-app/main/default/objects/ConferenceForm__c/fields/Vending_Day_s__c.field-meta.xml
<CustomField>
    <fullName>Vending_Day_s__c</fullName>
    <label>Vending Day(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friday 5/2</fullName>
            </value>
            <value>
                <fullName>Saturday 5/3</fullName>
            </value>
            <value>
                <fullName>Wednesday 4/30</fullName>
            </value>
            <value>
                <fullName>Thursday 5/1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>