force-app/main/default/objects/ConferenceForm__c/fields/Vendor_Booth__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Booth__c</fullName>
    <description>Vendor Booth</description>
    <label>Vendor Booth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Four Day Vendor</fullName>
            </value>
            <value>
                <fullName>Wednesday/Thursday Vendor</fullName>
            </value>
            <value>
                <fullName>Wednesday/Thursday NFP Vendor</fullName>
            </value>
            <value>
                <fullName>Friday Vendor</fullName>
            </value>
            <value>
                <fullName>Friday NFP Vendor</fullName>
            </value>
            <value>
                <fullName>Saturday Vendor</fullName>
            </value>
            <value>
                <fullName>Saturday NFP Vendor</fullName>
            </value>
            <value>
                <fullName>Friday &amp; Saturday Vendor</fullName>
            </value>
            <value>
                <fullName>Friday &amp; Saturday NFP Vendor</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>