force-app/main/default/objects/ConferenceForm__c/fields/VIP_Dinner_2025__c.field-meta.xml
<CustomField>
    <fullName>VIP_Dinner_2025__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP Dinner 2025</label>
    <type>Checkbox</type>
</CustomField>