force-app/main/default/objects/ConferenceForm__c/fields/Website_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Website_Contact_Name__c</fullName>
    <description>Information for Website: Contact Name</description>
    <label>Website: Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>