force-app/main/default/objects/ConferenceForm__c/fields/Website_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Website_Email_Address__c</fullName>
    <description>Information for Website: Email Address</description>
    <label>Website: Email Address</label>
    <type>Email</type>
</CustomField>