force-app/main/default/objects/ConferenceForm__c/fields/Website_General_Information__c.field-meta.xml
<CustomField>
    <fullName>Website_General_Information__c</fullName>
    <description>Information for Website: General Information (1-3 sentences)</description>
    <label>Website: General Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>