force-app/main/default/objects/ConferenceForm__c/fields/Website_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Website_Phone_Number__c</fullName>
    <description>Information for Website: Phone Number</description>
    <label>Website: Phone Number</label>
    <type>Phone</type>
</CustomField>