force-app/main/default/objects/ConferenceForm__c/fields/Why_nominee_deserves_the_award__c.field-meta.xml
<CustomField>
    <fullName>Why_nominee_deserves_the_award__c</fullName>
    <description>Please write a short essay (no more than one page) describing why you think the nominee deserves the award.</description>
    <label>Why nominee deserves the award:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>