force-app/main/default/objects/ConferenceForm__c/fields/X21st_CCLC_Friday_2025__c.field-meta.xml
<CustomField>
    <fullName>X21st_CCLC_Friday_2025__c</fullName>
    <defaultValue>false</defaultValue>
    <label>21st CCLC Friday 2025</label>
    <type>Checkbox</type>
</CustomField>