force-app/main/default/objects/ConferenceForm__c/fields/X21st_CCLC_Program_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>X21st_CCLC_Program_Physical_Address__c</fullName>
    <description>21st CCLC Program Physical Address</description>
    <label>21st CCLC Program Physical Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>