force-app/main/default/objects/ConferenceForm__c/fields/X21st_CCLC_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>X21st_CCLC_Project_ID__c</fullName>
    <description>21st CCLC Project ID</description>
    <label>21st CCLC Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>