force-app/main/default/objects/ConferenceForm__c/fields/X21st_CCLC_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>X21st_CCLC_Site_Location__c</fullName>
    <description>21st CCLC Site Location</description>
    <label>21st CCLC Site Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>