force-app/main/default/objects/ConferenceForm__c/fields/X21st_CCLC_Ticket__c.field-meta.xml
<CustomField>
    <fullName>X21st_CCLC_Ticket__c</fullName>
    <label>21st CCLC Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>